--- a/alpha/accounts/templates/accounts/_account_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_events_table.html
@@ -75,7 +75,7 @@
                     Copy
                 </a>
                 <a class="event-edit-actions__item event-edit-actions__item_pos_last"
-                   href="{% url 'event_remove' event.authentication_key %}" class="danger-action">
+                   href="{% url 'event_remove' event.authentication_key %}">
                     Delete
                 </a>
                 {% if not event.is_featured %}
