--- a/alpha/accounts/templates/venue_accounts/_venue_archived_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_archived_events_table.html
@@ -11,7 +11,8 @@
             {% short_single_event event %}
 
             <div class="event-edit-actions">
-                <a href="{% url 'event_copy' event.authentication_key %}">
+                <a class="event-edit-actions__item"
+                   href="{% url 'event_copy' event.authentication_key %}">
                     Copy
                 </a>
             </div>
