--- a/alpha/accounts/templates/venue_accounts/private_venue_account.html
+++ b/alpha/accounts/templates/venue_accounts/private_venue_account.html
@@ -122,22 +122,24 @@
             {% endif %}
 
             <div class="tabs-container">
-                <table class="tabs" data-page-id="private-venue-account" cellpadding="0" cellspacing="0">
-                    <tr>
-                        <td data-tab-id="venue-events" {% if active_tab == "venue-events" %}class="current"{% endif %}>
-                            <span>Venue Events</span>
-                        </td>
-                        <td data-tab-id="venue-featured-events" {% if active_tab == "venue-featured-events" %}class="current"{% endif %}>
-                            <span>Featured Events</span>
-                        </td>
-                        <td data-tab-id="venue-archived-events" {% if active_tab == "venue-archived-events" %}class="current"{% endif %}>
-                            <span>Archived events</span>
-                        </td>
-                        <td data-tab-id="venue-advertising-stats" {% if active_tab == "venue-advertising-stats" %}class="current"{% endif %}>
-                           <span>Advertising Stats</span>
-                        </td>
-                    </tr>
-                </table>
+                <div class="tabs-head">
+                    <table class="tabs" data-page-id="private-venue-account" cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td data-tab-id="venue-events" {% if active_tab == "venue-events" %}class="current"{% endif %}>
+                                <span>Venue Events</span>
+                            </td>
+                            <td data-tab-id="venue-featured-events" {% if active_tab == "venue-featured-events" %}class="current"{% endif %}>
+                                <span>Featured Events</span>
+                            </td>
+                            <td data-tab-id="venue-archived-events" {% if active_tab == "venue-archived-events" %}class="current"{% endif %}>
+                                <span>Archived events</span>
+                            </td>
+                            <td data-tab-id="venue-advertising-stats" {% if active_tab == "venue-advertising-stats" %}class="current"{% endif %}>
+                               <span>Advertising Stats</span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
                 <div class="box{% if active_tab == "venue-events" %} visible{% endif %}">
                     {% include 'venue_accounts/_venue_events_table.html' %}
                 </div>
