--- a/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/import_facebook_events.html
@@ -134,7 +134,7 @@
                      data-load-url="{% url 'load_facebook_events' %}"
                      data-create-url="{% url 'event_create_from_facebook' %}"
                      data-reject-url="{% url 'reject_facebook_event' %}"
-                     data-graph-clear-url="{% url 'clear_facebook_graph' %}"></div>
+                     data-graph-refresh-url="{% url 'refresh_facebook_graph' %}"></div>
                 <div data-id="load_more" class="load-more">
                     Load more
                 </div>
