--- a/alpha/venues/templates/venue_accounts/private_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/private_venue_account.html
@@ -31,6 +31,14 @@
 
             {% include "venue_accounts/_venue_details.html" %}
 
+            {% if venue_account.tags.count > 0 %}
+                <div class="tags">
+                    {% for tag in venue_account.tags.all %}
+                        {{ tag }}{% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </div>
+            {% endif %}
+
             <div class="tabs-container">
                 <table class="tabs" data-page-id="private-venue-account" cellpadding="0" cellspacing="0">
                     <tr>
