Rename use web as to My Account

--- a/alpha/venues/templates/venue_accounts/private_venue_account.html
+++ b/alpha/venues/templates/venue_accounts/private_venue_account.html
@@ -74,7 +74,7 @@
 
     <div class="settings account-help-container">
         <a class="button special" href="{% url 'userena_profile_detail' venue_account.account.user.username %}">
-            use web as <span>{{ venue_account.account.user.username }}</span>
+            My Account
         </a>
         <a class="button" href="{% url 'advertising_setup' %}">
             Create New Ad
