--- a/alpha/cityfusion_admin/templates/cf-admin/event_owner_search.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/event_owner_search.html
@@ -23,6 +23,9 @@
                     <td>
                         <a href="{% url 'mass_event_transfer' %}"><span>Mass event transferring</span></a>
                     </td>
+                    <td>
+                        <a href="{% url 'change_venue_owner_search' %}"><span>Venue owner</span></a>
+                    </td>
                 </tr>                
             </table>
             <div class="box visible options">
