--- a/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/change_venue_owner.html
@@ -15,17 +15,19 @@
     <div class="tabs-container">
         {% cf_admin_menu 'transfer_to_owner' %}
         <div class="box visible options">
-            <ul class="tabs">
-                <li>
-                    <a href="{% url 'change_event_owner_search' %}"><span>Event owner</span></a>
-                </li>
-                <li>
-                    <a href="{% url 'mass_event_transfer' %}"><span>Mass event transferring</span></a>
-                </li>
-                <li class="current">
-                    <span>Venue owner</span>
-                </li>
-            </ul>
+            <table class="tabs" cellpadding="0" cellspacing="0">
+                <tr>
+                    <td>
+                        <a href="{% url 'change_event_owner_search' %}"><span>Event owner</span></a>
+                    </td>
+                    <td>
+                        <a href="{% url 'mass_event_transfer' %}"><span>Mass event transferring</span></a>
+                    </td>
+                    <td class="current">
+                        <span>Venue owner</span>
+                    </td>
+                </tr>                
+            </table>
             <div class="box visible options">
                 <h1>
                     Search venues
