--- a/alpha/cityfusion_admin/templates/cf-admin/event_mass_transfer.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/event_mass_transfer.html
@@ -23,6 +23,9 @@
                     <td class="current">
                         <span>Mass event transferring</span>
                     </td>
+                    <td>
+                        <a href="{% url 'change_venue_owner_search' %}"><span>Venue owner</span></a>
+                    </td>
                 </tr>
             </table>
             <div class="box visible options">
