--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -33,7 +33,7 @@
         </a>
     </div>
 
-    <ul class="categories">
+    <ul class="categories categories_pos_bottom">
         <li>
             <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}" class="ajax">
                 Featured
