--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -90,7 +90,7 @@
                 </ul>
             {% endif %}
         {% endblock messages %}
-        <div class="wrapper">
+        <div class="wrapper outer-wrapper">
             <div class="primary-header" data-no-turbolink>
                 <div class="content">
                     <div class="logo">
