--- a/alpha/event/templates/events/_searchpad_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_datetime_menu.html
@@ -3,27 +3,27 @@
 <div class="schedule-bar">    
     <table class="schedule-bar-menu" cellpadding="0" cellspacing="0">
         <tr>
-            <td {% if period == "today" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "today" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="today" exclude="datetime" %}" class="jump ajax">
                     Today
                 </a>
             </td>
-            <td {% if period == "tomorrow" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "tomorrow" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="tomorrow"  exclude="datetime" %}" class="jump ajax">
                     Tomorrow
                 </a>
             </td>
-            <td {% if period == "this-weekend" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "this-weekend" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="this-weekend"  exclude="datetime" %}" class="jump ajax">
                     This weekend
                 </a>
             </td>
-            <td {% if period == "next-week" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "next-week" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="next-week"  exclude="datetime" %}" class="jump ajax">
                     Next week
                 </a>
             </td>
-            <td>
+            <td class="schedule-bar__item">
                 <a href="javascript:void(0);"  class="jump jump-popup-opener">
                     Jump to date
                 </a>
