--- a/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
@@ -1,29 +1,29 @@
 {% load query_filter %}
 {% load date_formatting %}
-<div class="schedule-bar">
+<div class="schedule-bar schedule-bar_type_popup">
     <table class="schedule-bar-menu" cellpadding="0" cellspacing="0">
         <tr>
-            <td {% if period == "today" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "today" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="today" exclude="datetime" %}" class="jump ajax">
                     Today
                 </a>
             </td>
-            <td {% if period == "tomorrow" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "tomorrow" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="tomorrow"  exclude="datetime" %}" class="jump ajax">
                     Tomorrow
                 </a>
             </td>
-            <td {% if period == "this-weekend" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "this-weekend" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="this-weekend"  exclude="datetime" %}" class="jump ajax">
                     This weekend
                 </a>
             </td>
-            <td {% if period == "next-week" %} class="selected"{% endif %}>
+            <td class="schedule-bar__item {% if period == "next-week" %}selected{% endif %}">
                 <a href="{% events_filter_url request eventsFilter period="next-week"  exclude="datetime" %}" class="jump ajax">
                     Next week
                 </a>
             </td>
-            <td>
+            <td class="schedule-bar__item">
                 <a href="javascript:void(0);"  class="jump jump-popup-opener">
                     Jump to date
                 </a>
@@ -36,7 +36,7 @@
             <div class="jump-popup__date-row">
                 <div class="jump-popup__date-cell">
                     <div class="jump-popup__legend-wrapper">
-                        <div class="checkbox">
+                        <div class="checkbox jump-popup__checkbox">
                             <input id="dateJumpToDatePopupCheckbox" type="checkbox" class="date-checkbox" checked>
                             <label for="dateJumpToDatePopupCheckbox">  </label>
                             <span class="jump-popup__legend">Select Start Date</span>
