Sprockets in progress

--- a/alpha/cityfusion_admin/templates/actions/venue_actions.html
+++ b/alpha/cityfusion_admin/templates/actions/venue_actions.html
@@ -1,4 +1,4 @@
-{% if request.user == venue_account.account.user %}
+{% if request.user.is_staff or request.user == venue_account.account.user %}
     <div class="cfadmin-actions">        
         <span>Viewed: {{ venue_account.viewed }}</span>
     </div>
