--- a/alpha/venues/templates/venue_accounts/_venue_public_featured_events_table.html
+++ b/alpha/venues/templates/venue_accounts/_venue_public_featured_events_table.html
@@ -7,7 +7,7 @@
 
 {% paginate 6 venue_featured_events using "featured_events_page" %}
 <div class="account-entry-wrapper entry-wrapper">
-    {% for event in venue_events %}    
+    {% for event in venue_featured_events %}    
         <div class="entry-info {% if private %}{% if not event.is_featured %}with-all-actions{% else %}without-make-feature-action{% endif %}{% endif %}">
             {% short_single_event event %}
 
