--- a/alpha/event/static/styles/browse/featured_events.css
+++ b/alpha/event/static/styles/browse/featured_events.css
@@ -69,6 +69,7 @@
     font-size: 10px;
 }
 
+.featured-title,
 .featured-title a {
     font-weight: bold;
     color: #eb8a19;
@@ -84,6 +85,7 @@
     text-decoration: none;
 }
 
+.featured-details-link,
 .featured-details-link a {
     color: #247cc3;
     text-decoration: none;
