--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -128,7 +128,7 @@
         </div>        
     </div>
 
-    {% if profile.bonus_budget %}
+    {% if profile.bonus_budget.amount %}
         <div class="bonus-budget">
             <header>
                 Bonus Money
