Change searchpad layout to make it nowrap

--- a/alpha/event/static/styles/searchpad/popup.css
+++ b/alpha/event/static/styles/searchpad/popup.css
@@ -8,7 +8,8 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
-.search-pad-popup-content {    
+.search-pad-popup-content {
+    position: relative;
     width: 990px;
     padding: 10px;
     min-height: 612px;
@@ -27,7 +28,8 @@
 }
 
 .search-pad-advertising {
-    margin-left: 10px;
+    position: absolute;
+    right: 10px;
 }
 
 .search-pad-popup .main-navigation-nav-wrapper ul.categories li {
