Use height and width attrs for images to avoid blinking on image uploading

--- a/alpha/event/templates/featured/featured_events.html
+++ b/alpha/event/templates/featured/featured_events.html
@@ -4,7 +4,7 @@
     {% if in_email %}
         <td height="147" style="border: 5px solid #ffffff" valign="top">
             <a target="_blank" href="{{site}}{% featured_event_link event %}" style="text-decoration:none; border: none; display: block; line-height:0px;">
-                <img src="{{site}}{{STATIC_URL}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;" />
+                <img src="{{site}}{{STATIC_URL}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;"  height="154" width="154"/>
             </a>
         </td>
         <td width="10" align="left">
