--- a/alpha/event/templates/featured/featured_event.html
+++ b/alpha/event/templates/featured/featured_event.html
@@ -2,7 +2,7 @@
 {% load featured_event %}
 {% if in_email %}
     <a target="_blank" href="{{site}}{% featured_event_link event %}" style="text-decoration:none; border: none; display: block; line-height:0px;">
-        <img src="{{site}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;"  height="154" width="154"/>
+        <img src="{{site}}/{% feature_event_as_image event %}" style="border-collapse:collapse; border: none;" />
     </a>
 {% else %}
     <div class="features">
