Modify create event page script. Init attachments and images widget in CreateEventPage instead of using onload

--- a/alpha/cityfusion_admin/templates/cf-admin/base.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/base.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="{{STATIC_URL}}js/libs/underscore-min.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/event/purl.js" ></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/event/query_filters.js" ></script>
+    <script src="{{STATIC_URL}}js/create_event/dombuilder.js" type="text/javascript"></script>
     
     <script type="text/javascript" src="{{STATIC_URL}}js/accounts/choose-account-context.js"></script>
     <script type="text/javascript" src="{{STATIC_URL}}js/messages.js"></script>
