Date/time sliding on multiple day event. Fix sliding when there are less than 4 days

--- a/alpha/event/static/styles/event/event-details.css
+++ b/alpha/event/static/styles/event/event-details.css
@@ -574,6 +574,11 @@
     height: 20px;
     right: 0;
     top: 0;
+    display: none;
+}
+
+.events-occurrences .header .days-viewer-controls.active {
+    display: block;
 }
 
 .events-occurrences .header .days-viewer-controls div {
