Use default end time for featured setup event form from last event occurrence end_time

--- a/alpha/cityfusion_admin/templates/cf-admin/admin-setup-featured-event.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-setup-featured-event.html
@@ -94,7 +94,7 @@
                             </div>
                         </td>
                         <td>
-                            <input id="days_to_display" type="text" name="days_to_display" value="15">
+                            <input id="days_to_display" type="text" name="days_to_display">
                         </td>
                         <td colspan="4" class="long">
                             <!-- TODO: change text -->
