--- a/alpha/event/templates/events/setup_featured_event.html
+++ b/alpha/event/templates/events/setup_featured_event.html
@@ -58,7 +58,7 @@
                         Days to display
                     </header>
                     <div class="featured-form__text-field">
-                        <input id="days_to_display" type="text" name="days_to_display" value="15">
+                        <input id="days_to_display" type="text" name="days_to_display">
                     </div>
 
                     <div class="featured-form__featured-options">
